<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/dakrMTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/settLangT"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/tick_vect_icone"
        android:id="@+id/doneBtn"
        app:layout_constraintBottom_toBottomOf="@id/dakrMTv"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@+id/dakrMTv"
        app:layout_constraintTop_toTopOf="@id/dakrMTv" />
    <View
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/dakrMTv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_8sdp"
        android:id="@+id/vLine"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/lightExt"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/l"
        android:orientation="vertical">
        <TextView
            android:id="@+id/selePL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/settLangPerfer"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/poppins"
            android:layout_marginStart="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/systemDef"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:id="@+id/defLangBtn"
            android:background="@drawable/strokeshape">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:id="@+id/defoultLTv"
                android:text="@string/english"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/defaulR"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/defaulR"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:padding="@dimen/_2sdp"
                android:background="@drawable/rounded_bl"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:id="@+id/defoultFlag"
                android:src="@drawable/unitedstates"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/poppins"
            android:layout_marginStart="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:id="@+id/indianLangbtn"
            android:background="@drawable/strokeshape">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:id="@+id/indianLangTv"
                android:text="@string/hindi"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/indianLangR"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/indianLangR"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:padding="@dimen/_2sdp"
                android:background="@drawable/rounded_bl"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:id="@+id/indianLangFlag"
                android:src="@drawable/brazil"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/chineLangBtn"
            android:background="@drawable/strokeshape">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:id="@+id/chineLangtv"
                android:text="@string/chines"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/chineLanR"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/chineLanR"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:padding="@dimen/_2sdp"
                android:background="@drawable/rounded_bl"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:id="@+id/chinaFlag"
                android:src="@drawable/china"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/spanishBtn"
            android:background="@drawable/strokeshape">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:id="@+id/chineangtv"
                android:text="@string/spanish"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/spanishR"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/spanishR"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:padding="@dimen/_2sdp"
                android:background="@drawable/rounded_bl"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:id="@+id/chinalag"
                android:src="@drawable/spanish_flag"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/afrecianBtn"
            android:background="@drawable/strokeshape">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:id="@+id/chneangtv"
                android:text="@string/afrikaans"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/afrecianLanR"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/afrecianLanR"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:padding="@dimen/_2sdp"
                android:background="@drawable/rounded_bl"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:id="@+id/chinaag"
                android:src="@drawable/afrecian_flag"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/itlianBtn"
            android:background="@drawable/strokeshape">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:id="@+id/chnengtv"
                android:text="@string/italian"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/itlianLaR"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/itlianLaR"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:padding="@dimen/_2sdp"
                android:background="@drawable/rounded_bl"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:id="@+id/chnaag"
                android:src="@drawable/italian_flag"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>